# diabetes_diagnosis

./: .gitignore  README.md  app.ipynb  main.py  pyproject.toml
