[project]
name = "Diabetes diagnosis using ensemble model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.3",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "xgboost>=2.1.2",
]
